# StructuredEikonal

./: README.md
src/: CMakeLists.txt  StructuredEikonal.cu  StructuredEikonal.h  common_def.h  cuda_fim.cu  cuda_fim.h  cuda_fim_kernel.cu  cuda_fim_kernel.h  example1.cu  exception.h  helper_timer.c  helper_timer.cpp  helper_timer.h
